[main] create two activities

--- a/KMemo/app/src/main/res/values/strings.xml
+++ b/KMemo/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">KMemo</string>
+    <string name="hicreaby">HI! GREABY!!!!</string>
+    <string name="hiatlas">HI! ATLAS!!!</string>
+    <string name="activity_name1">Creaby\'s Memo</string>
+    <string name="activity_name2">ATLAS\' MEMO</string>
 </resources>
